<resources>
    <string name="app_name">18xx Scoring</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_companies">Companies</string>
    <string name="menu_players">Players</string>
    <string name="menu_score_sheet">Score sheet</string>
    <string name="stock">Stock</string>
    <string name="run_1">Run 1</string>
    <string name="run_2">Run 2</string>
    <string name="run_3">Run 3</string>
    <string name="run_4">Run 4</string>
    <string name="final_stock_price">Final Stock Price</string>
    <string name="game">Game</string>
    <string name="players">Players</string>
    <string name="add_player">Add Player</string>
    <string name="player">Player</string>
    <string name="run">Run</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_0">0</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="shares">Shares</string>
    <string name="menu_summary">Standings</string>
    <string name="cash">Cash</string>
    <string name="add_new_player">Add New Player</string>
    <string name="remove_player_prompt">Remove %s?</string>
    <string name="run_input_label">payout/share for run %d</string>
    <string name="other_assets">Other Assets</string>
    <string name="other_assets_label">Other Assets (minors, privates, etc.)</string>
    <string name="add_player_button">+</string>
</resources>
